# staking_vault

./: .gitignore  Anchor.toml  arch.drawio  codama.js  docs.md  implementation_details.md  notes.md  package-lock.json  package.json  readme.md  tracker.md  tsconfig.json  user-stories.md
diagrams/: simple-arch.xml  simplev2.xml
legacy/: readme.md
programs/capital_program/: Cargo.toml
programs/capital_program/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/capital_program/src/errors/: arithmetic_errors.rs  claim_rewards.rs  claim_rewards_errors.rs  create_vault.rs  create_vault_errors.rs  deposit_rewards.rs  deposit_rewards_errors.rs  init_program.rs  init_program_errors.rs  mod.rs  nft_program_errors.rs  phase_errors.rs  position_error.rs  position_error_errors.rs  position_errors.rs  signer_errors.rs  slashing_errors.rs  token_errors.rs  vault_errors.rs
programs/capital_program/src/instructions/: claim_beneficiary_rewards.rs  claim_investor_rewards.rs  close.rs  close_position.rs  close_vault.rs  create_slash_req.rs  create_vault.rs  deposit_rewards.rs  finalize_slash_req.rs  init_program.rs  mod.rs  open_position.rs  update_position.rs
programs/staking_vault/: Cargo.toml
programs/staking_vault/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/staking_vault/src/errors/: mod.rs
programs/staking_vault/src/instructions/: close.rs  close_position.rs  create_vault.rs  deposit_rewards.rs  init_program.rs  mod.rs  open.rs  open_position.rs  stake.rs  unstake.rs  update_position.rs
programs/staking_vault/src/state/: mod.rs
scripts/: depositRewards.ts  (+3 more)
(+34 files in other folders)
